tests/spec/fail/datetime_parse_bad_date.aja
import (
    "modules/datetime"
)

print(datetime.parseIso("2023-02-29T00:00:00Z"))
